# market-maker-algo

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  trading_node.py
.github/workflows/: ci.yml
api/: binance_adapter.py  fastapi_server.py  fix_protocol_adapter.py  websocket_stream.py
backtest/: engine.py  metrics.py
config/: config_loader.py  logging.yaml  settings.yaml
core/: fast_matching_engine.pyx  matching_engine.py  orderbook.py  risk_manager.py
data/: feed_handler.py  historical_loader.py  parquet_writer.py  simulator.py
docs/: architecture.md
ml_models/: lstm_price_predictor.py
notebooks/: 01_orderbook_visualization.ipynb  02_avellaneda_stoikov_math.ipynb  03_lstm_model_training.ipynb  04_rl_agent_evaluation.ipynb  05_statistical_arbitrage.ipynb
scripts/: deploy_prod.sh  run_backtest.sh
strategy/: avellaneda_stoikov.py  base_strategy.py  market_maker_v2.py  rl_market_maker.py  statistical_arbitrage.py  twap_execution.py  vwap_execution.py
tests/: test_orderbook.py  test_risk_manager.py
utils/: logger.py  math_utils.py  profiling.py  time_utils.py
