[tool.poetry]
name = "hft-mms"
version = "2.0.0"
description = "Institutional Market Making Algorithm Simulation"
authors = ["Quantitative Engineering Team <quant@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.3"
requests = "^2.31.0"
PyYAML = "^6.0.1"
pyarrow = "^12.0.1"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
redis = "^5.0.0"
confluent-kafka = "^2.2.0"
cython = "^3.0.2"
torch = "^2.0.1"
stable-baselines3 = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
